:feat: end header

--- a/src/output.css
+++ b/src/output.css
@@ -16,6 +16,15 @@
     --color-white: #fff;
     --spacing: 0.25rem;
     --container-6xl: 72rem;
+    --text-xl: 1.25rem;
+    --text-xl--line-height: calc(1.75 / 1.25);
+    --text-4xl: 2.25rem;
+    --text-4xl--line-height: calc(2.5 / 2.25);
+    --text-6xl: 3.75rem;
+    --text-6xl--line-height: 1;
+    --text-8xl: 6rem;
+    --text-8xl--line-height: 1;
+    --font-weight-bold: 700;
     --radius-sm: 0.25rem;
     --default-transition-duration: 150ms;
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -178,6 +187,24 @@
   .my-0 {
     margin-block: calc(var(--spacing) * 0);
   }
+  .my-50 {
+    margin-block: calc(var(--spacing) * 50);
+  }
+  .my-52 {
+    margin-block: calc(var(--spacing) * 52);
+  }
+  .my-56 {
+    margin-block: calc(var(--spacing) * 56);
+  }
+  .my-auto {
+    margin-block: auto;
+  }
+  .mt-8 {
+    margin-top: calc(var(--spacing) * 8);
+  }
+  .mb-10 {
+    margin-bottom: calc(var(--spacing) * 10);
+  }
   .flex {
     display: flex;
   }
@@ -186,6 +213,12 @@
   }
   .max-w-6xl {
     max-width: var(--container-6xl);
+  }
+  .max-w-\[458px\] {
+    max-width: 458px;
+  }
+  .max-w-\[804px\] {
+    max-width: 804px;
   }
   .max-w-\[1600px\] {
     max-width: 1600px;
@@ -263,11 +296,37 @@
   .pt-9 {
     padding-top: calc(var(--spacing) * 9);
   }
+  .text-4xl {
+    font-size: var(--text-4xl);
+    line-height: var(--tw-leading, var(--text-4xl--line-height));
+  }
+  .text-6xl {
+    font-size: var(--text-6xl);
+    line-height: var(--tw-leading, var(--text-6xl--line-height));
+  }
+  .text-8xl {
+    font-size: var(--text-8xl);
+    line-height: var(--tw-leading, var(--text-8xl--line-height));
+  }
+  .text-xl {
+    font-size: var(--text-xl);
+    line-height: var(--tw-leading, var(--text-xl--line-height));
+  }
+  .font-bold {
+    --tw-font-weight: var(--font-weight-bold);
+    font-weight: var(--font-weight-bold);
+  }
   .text-white {
     color: var(--color-white);
   }
   .underline {
     text-decoration-line: underline;
+  }
+  .bg-blend-darken {
+    background-blend-mode: darken;
+  }
+  .mix-blend-darken {
+    mix-blend-mode: darken;
   }
   .outline {
     outline-style: var(--tw-outline-style);
@@ -382,6 +441,10 @@
   inherits: false;
   initial-value: solid;
 }
+@property --tw-font-weight {
+  syntax: "*";
+  inherits: false;
+}
 @property --tw-outline-style {
   syntax: "*";
   inherits: false;
@@ -394,6 +457,7 @@
       --tw-scale-y: 1;
       --tw-scale-z: 1;
       --tw-border-style: solid;
+      --tw-font-weight: initial;
       --tw-outline-style: solid;
     }
   }
