--- a/src/input.css
+++ b/src/input.css
@@ -1,1 +1,12 @@
 @import 'tailwindcss';
+.nav-link {
+  @apply hover:text-amber-200 transition-colors;
+}
+
+.roboto-normal {
+  font-family: 'Roboto', sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings: 'wdth' 100;
+}
