--- a/src/output.css
+++ b/src/output.css
@@ -8,18 +8,14 @@
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
     --color-red-400: oklch(70.4% 0.191 22.216);
-    --color-red-500: oklch(63.7% 0.237 25.331);
-    --color-orange-300: oklch(83.7% 0.128 66.29);
-    --color-amber-300: oklch(87.9% 0.169 91.605);
-    --color-amber-400: oklch(82.8% 0.189 84.429);
-    --color-green-300: oklch(87.1% 0.15 154.449);
-    --color-blue-400: oklch(70.7% 0.165 254.624);
-    --color-rose-300: oklch(81% 0.117 11.638);
+    --color-amber-200: oklch(92.4% 0.12 95.746);
     --color-white: #fff;
     --spacing: 0.25rem;
     --container-6xl: 72rem;
+    --font-weight-normal: 400;
     --radius-sm: 0.25rem;
-    --radius-2xl: 1rem;
+    --default-transition-duration: 150ms;
+    --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
   }
@@ -179,23 +175,11 @@
   .my-0 {
     margin-block: calc(var(--spacing) * 0);
   }
-  .my-auto {
-    margin-block: auto;
-  }
   .flex {
     display: flex;
   }
   .table {
     display: table;
-  }
-  .h-64 {
-    height: calc(var(--spacing) * 64);
-  }
-  .max-h-36 {
-    max-height: calc(var(--spacing) * 36);
-  }
-  .w-64 {
-    width: calc(var(--spacing) * 64);
   }
   .max-w-6xl {
     max-width: var(--container-6xl);
@@ -228,38 +212,14 @@
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
-  .bg-orange-300 {
-    background-color: var(--color-orange-300);
-  }
   .bg-red-400 {
     background-color: var(--color-red-400);
-  }
-  .bg-red-500 {
-    background-color: var(--color-red-500);
-  }
-  .bg-rose-300 {
-    background-color: var(--color-rose-300);
-  }
-  .bg-\[url\(\'\.\/img\/background\.jpg\'\)\] {
-    background-image: url('./img/background.jpg');
   }
   .bg-\[url\(\'\/img\/background\.jpg\'\)\] {
     background-image: url('/img/background.jpg');
   }
-  .bg-auto {
-    background-size: auto;
-  }
-  .bg-bottom-left {
-    background-position: left bottom;
-  }
-  .bg-center {
-    background-position: center;
-  }
   .bg-top {
     background-position: top;
-  }
-  .bg-top-left {
-    background-position: left top;
   }
   .bg-no-repeat {
     background-repeat: no-repeat;
@@ -279,6 +239,10 @@
   .pt-9 {
     padding-top: calc(var(--spacing) * 9);
   }
+  .font-normal {
+    --tw-font-weight: var(--font-weight-normal);
+    font-weight: var(--font-weight-normal);
+  }
   .text-white {
     color: var(--color-white);
   }
@@ -289,11 +253,48 @@
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
   }
+  .\[\&\>li\>a\]\:transition-colors {
+    &>li>a {
+      transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to;
+      transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
+      transition-duration: var(--tw-duration, var(--default-transition-duration));
+    }
+  }
+  .\[\&\>li\>a\]\:hover\:text-red-400 {
+    &>li>a {
+      &:hover {
+        @media (hover: hover) {
+          color: var(--color-red-400);
+        }
+      }
+    }
+  }
+}
+.nav-link {
+  transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to;
+  transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
+  transition-duration: var(--tw-duration, var(--default-transition-duration));
+  &:hover {
+    @media (hover: hover) {
+      color: var(--color-amber-200);
+    }
+  }
+}
+.roboto-normal {
+  font-family: 'Roboto', sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings: 'wdth' 100;
 }
 @property --tw-border-style {
   syntax: "*";
   inherits: false;
   initial-value: solid;
+}
+@property --tw-font-weight {
+  syntax: "*";
+  inherits: false;
 }
 @property --tw-outline-style {
   syntax: "*";
@@ -304,6 +305,7 @@
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
       --tw-border-style: solid;
+      --tw-font-weight: initial;
       --tw-outline-style: solid;
     }
   }
